@@ -377,3 +377,10 @@ test_that("#123: Supporting NA's in treatment, pairmatch.glm/bigglm", {
   expect_equivalent(p, p2)
 
 })
+
+test_that("#116: If nt>nc, try creating nc pairs" , {
+  data <- data.frame(z = c(rep(0, 2),rep(1,3)),
+                     x = rnorm(5))
+  p <- pairmatch(z ~ x, data = data)
+  expect_false(all(is.na(p)))
+})
